--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
   <link rel="stylesheet" href="game.css">
 </head>
 <body>
-  <!-- Background video -->
+  <!-- Hintergrundvideo (hinter allem) -->
   <video id="bg-video" autoplay muted loop playsinline>
     <source src="Assets/mecoding.mp4" type="video/mp4">
   </video>
 
-  <!-- Center card (one card only) -->
+  <!-- Zentrierte Card mit Blur — eine Karte -->
   <main class="card game-card" role="main" aria-label="Game card">
     <header class="card-header">
       <img src="Assets/medeving.jpg" class="profile-pic" alt="moritz">
       <div class="header-info">
-        <h1>slither — singleplayer</h1>
+        <h1 class="title">slither — singleplayer</h1>
         <div class="sub">Maus / Touch / WASD — Halten = Boost</div>
       </div>
     </header>
 
-    <div class="canvas-wrap">
+    <div class="canvas-wrap" id="canvas-wrap">
+      <!-- Canvas füllt nur die Card-Area, transparente Hintergründe, Video sichtbar -->
       <canvas id="game-canvas" tabindex="0" aria-label="Spielbereich"></canvas>
+
       <div id="hud">
         <div id="score">Score: 0</div>
         <div id="best">Best: 0</div>
@@ -33,7 +35,9 @@
 
     <footer class="card-footer">
       <p class="info">Boost kostet Länge. Ziel: so groß wie möglich werden.</p>
-      <button id="back" class="btn primary">Zurück</button>
+      <div>
+        <button id="back" class="btn primary">Zurück</button>
+      </div>
     </footer>
   </main>
 
