--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slither Clone</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Slither Karte</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <video autoplay muted loop id="bg-video">
-        <source src="deinvideo.mp4" type="video/mp4">
-    </video>
 
-    <div class="canvas-wrap">
-        <canvas id="gameCanvas"></canvas>
-    </div>
+<!-- Hintergrundvideo -->
+<video autoplay muted loop id="bg-video" class="bg-video">
+  <source src="Assets/mecoding.mp4" type="video/mp4">
+</video>
 
-    <button id="restart" class="btn primary">Restart</button>
+<!-- Karte -->
+<div class="card">
+  <canvas id="gameCanvas"></canvas>
+  <button id="restart" class="card-play-btn hidden">Restart</button>
+</div>
 
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
