--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Slither Karte</title>
+<title>Slither in Karte</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,6 +19,6 @@
   <button id="restart" class="card-play-btn hidden">Restart</button>
 </div>
 
-<script src="script.js"></script>
 </body>
+<script src="script.js"></script>
 </html>
