--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <div class="card">
   <canvas id="gameCanvas"></canvas>
+  <div id="scoreboard">
+    <span id="score">Score: 0</span>
+    <span id="highscore">Highscore: 0</span>
+  </div>
   <button id="restart" class="card-play-btn hidden">Restart</button>
 </div>
 
